--- a/almacor-front/package.json
+++ b/almacor-front/package.json
@@ -1,6 +1,7 @@
 {
   "name": "almacor-front",
   "version": "0.1.0",
+  "proxy": "https://apicd.almacorweb.com/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
