--- a/almacor-front/package.json
+++ b/almacor-front/package.json
@@ -19,6 +19,7 @@
     "react-imask": "^6.4.3",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "serve": "^14.2.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
