--- a/almacor-front/package.json
+++ b/almacor-front/package.json
@@ -1,8 +1,11 @@
 {
   "name": "almacor-front",
   "version": "0.1.0",
-  "proxy": "https://apicd.almacorweb.com/",
-  "private": true,
+  "proxy": "",
+  "alllowedHosts": [
+    "127.0.0.1"
+  ],
+  "private": false,
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
